# adata

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
adata/: __init__.py  __main__.py  client.py  config.py  mcp_server.py  schema.py  store.py  updater.py
adata/providers/: __init__.py  akshare_provider.py  baostock_provider.py  base.py  polardb_provider.py  rqdatac_provider.py  tushare_provider.py
scripts/: daily_update.sh
tests/: conftest.py  test_client.py  test_config.py  test_mcp_server.py  test_providers.py  test_schema.py  test_store.py  test_updater.py
