[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adata"
version = "0.1.0"
description = "Agent-Native financial data infrastructure"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
rqdatac = ["rqdatac"]
baostock = ["baostock"]
akshare = ["akshare"]
tushare = ["tushare"]
polardb = ["pymysql"]
mcp = ["mcp[cli]"]
all = ["rqdatac", "baostock", "akshare", "tushare", "pymysql", "mcp[cli]"]

[project.scripts]
adata = "adata.__main__:main"
